DSND-2703: Fix sonar issues (#115)
* DSND-2703: Upgrade to Java 21

* DSND-2703: Get docker working with cucumber tests

* The cucumber tests would not run due to testcontainers not
  finding a "valid docker environment". The reason for this was
  because data-sync-api-sdk-java had the transitive dependency
  docker-java-api which is out of date (presumeably out of date
  with the current spring or testcontainers version. Therefore,
  adding the docker-java-api dependency to the pom with the most
  recent version got the cucumber tests running, albeit not all
  pass.
* In addition to this, I've added docker-java-api as an exclusion
  to data-sync-api-sdk-java to be even more explicit - this might
  get removed going forward as it may be deemed unneccessary.

* DSND-2703: WIP get cucumber 503s working

* TestRestTemplate was timing out due to waiting for Mongo to respond.
  This was caused by an out of date transitive dep.

* DSND-2703: Remove unused dep

* DSND-2703: Remove unused property from pom

* DSND-2703: Clean up pom

* DSND-2703: Fix failing GET list cucumber tests

* DSND-2703: Add autocloseable to steps

* DSND-2703: Optimise imports

* DSND-2703: Address majority of sonar lint complaints

* DSND-2703: Refactor switch statement

* DSND-2703: WIP Trying to fix checkstyle plugin issue

* DSND-2703: Remove checkstyle plugiin

* DSND-2703: Remove unused exception class

* DSND-2703: Remove unused get/set